force-app/main/default/objects/HSEQ_Forms__c/HSEQ_Forms__c.object-meta.xml
<CustomObject>
    <label>HSEQ Forms</label>
    <nameField>
        <displayFormat>HSEQ-{000}</displayFormat>
        <label>HSEQ #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HSEQ Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>