force-app/main/default/objects/HSEQ_Forms__c/fields/Action_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Due_Date__c</fullName>
    <label>Action Due Date</label>
    <type>Date</type>
</CustomField>