force-app/main/default/objects/HSEQ_Forms__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <inlineHelpText>e.g MR/Work Orders</inlineHelpText>
    <label>Action Taken</label>
    <type>TextArea</type>
</CustomField>