force-app/main/default/objects/HSEQ_Forms__c/fields/Actions_Required__c.field-meta.xml
<CustomField>
    <fullName>Actions_Required__c</fullName>
    <label>Actions Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>