force-app/main/default/objects/HSEQ_Forms__c/fields/Alarm_clearly_audible_from_all_areas__c.field-meta.xml
<CustomField>
    <fullName>Alarm_clearly_audible_from_all_areas__c</fullName>
    <inlineHelpText>Was the alarm heard by all team members from all areas?</inlineHelpText>
    <label>Alarm clearly audible from all areas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>