force-app/main/default/objects/HSEQ_Forms__c/fields/Areas_of_Concern__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Concern__c</fullName>
    <label>Areas of Concern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>