force-app/main/default/objects/HSEQ_Forms__c/fields/Attendee1__c.field-meta.xml
<CustomField>
    <fullName>Attendee1__c</fullName>
    <label>Attendee 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>