force-app/main/default/objects/HSEQ_Forms__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <inlineHelpText>Name all people who were present</inlineHelpText>
    <label>Attendees</label>
    <type>TextArea</type>
</CustomField>