force-app/main/default/objects/HSEQ_Forms__c/fields/Business_Management__c.field-meta.xml
<CustomField>
    <fullName>Business_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Management</label>
    <referenceTo>Business_Management__c</referenceTo>
    <relationshipLabel>HSEQ Forms</relationshipLabel>
    <relationshipName>HSEQ_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>