force-app/main/default/objects/HSEQ_Forms__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HSEQ Forms</relationshipLabel>
    <relationshipName>HSEQ_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>