force-app/main/default/objects/HSEQ_Forms__c/fields/Client_Inducted__c.field-meta.xml
<CustomField>
    <fullName>Client_Inducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Inducted</label>
    <type>Checkbox</type>
</CustomField>