force-app/main/default/objects/HSEQ_Forms__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Give feedback on the level of success of the Meeting/Review/Drill. E.g. Was the team responsive, attentive, etc? Have you got any suggestions for improvement?</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>