force-app/main/default/objects/HSEQ_Forms__c/fields/Comments_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Comments_Suggestions__c</fullName>
    <label>Comments/Suggestions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>