force-app/main/default/objects/HSEQ_Forms__c/fields/Conducted_by__c.field-meta.xml
<CustomField>
    <fullName>Conducted_by__c</fullName>
    <inlineHelpText>Name of third party or WD personnel who conducted the audit/inpsection</inlineHelpText>
    <label>Conducted by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>