force-app/main/default/objects/HSEQ_Forms__c/fields/Contracting_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Company_Name__c</fullName>
    <label>Contracting Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>