force-app/main/default/objects/HSEQ_Forms__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor</label>
    <type>Checkbox</type>
</CustomField>