force-app/main/default/objects/HSEQ_Forms__c/fields/Daily_Site_Job__c.field-meta.xml
<CustomField>
    <fullName>Daily_Site_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Site Job</label>
    <referenceTo>Daily_Report__c</referenceTo>
    <relationshipLabel>HSEQ Forms</relationshipLabel>
    <relationshipName>HSEQ_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>