force-app/main/default/objects/HSEQ_Forms__c/fields/Date_Sample_Was_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Sample_Was_Taken__c</fullName>
    <label>Date Sample Was Taken</label>
    <type>DateTime</type>
</CustomField>