force-app/main/default/objects/HSEQ_Forms__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Provide details on the review/drill/meeting that was conducted</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>