force-app/main/default/objects/HSEQ_Forms__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Provide in-depth details of what happened during the Meeting/Review/Drill.</inlineHelpText>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>