force-app/main/default/objects/HSEQ_Forms__c/fields/Drops_Area_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Drops_Area_Inspected__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Derrick &amp; Crown</fullName>
            </value>
            <value>
                <fullName>Monkey Board &amp; Rod Basket</fullName>
            </value>
            <value>
                <fullName>Work Floor &amp; Pipe Rack</fullName>
            </value>
            <value>
                <fullName>Work Benches, Mud Tank &amp; Mud Pump</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Injury/Illness</fullName>
            </value>
            <value>
                <fullName>Vehicle/Machinery</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Environmental Spill</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Heights Rescue</fullName>
            </value>
            <value>
                <fullName>Well Control Situation</fullName>
            </value>
            <value>
                <fullName>Promotion of Em&apos;ee</fullName>
                <label>Promotion of Em&apos;ee/New Em&apos;ee</label>
            </value>
            <value>
                <fullName>Manager&apos;s Discretion</fullName>
                <label>Management Discretion</label>
            </value>
            <value>
                <fullName>equip_change</fullName>
                <label>Modified Equipment</label>
            </value>
            <value>
                <fullName>Routine Task not preformed by team within last 3 months</fullName>
            </value>
            <value>
                <fullName>Change Out Equipment</fullName>
            </value>
            <value>
                <fullName>SOP Amendment been Implemented</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>