force-app/main/default/objects/HSEQ_Forms__c/fields/Emergency_Drill_Details__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Drill_Details__c</fullName>
    <inlineHelpText>Results of Drill, Timeline</inlineHelpText>
    <label>Emergency Drill Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>