force-app/main/default/objects/HSEQ_Forms__c/fields/Evacuation_Required__c.field-meta.xml
<CustomField>
    <fullName>Evacuation_Required__c</fullName>
    <inlineHelpText>Did this type of drill require the crew to evacuate? If no, skip to Assessment section.</inlineHelpText>
    <label>Evacuation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>