force-app/main/default/objects/HSEQ_Forms__c/fields/Feedback_from_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Feedback_from_Operations_Manager__c</fullName>
    <inlineHelpText>Add any feedback you would like to provide.</inlineHelpText>
    <label>Feedback from Operations Manager</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>