force-app/main/default/objects/HSEQ_Forms__c/fields/Forms_Attached__c.field-meta.xml
<CustomField>
    <fullName>Forms_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The completed document must be attached to this record for referral</inlineHelpText>
    <label>Document Attached</label>
    <type>Checkbox</type>
</CustomField>