force-app/main/default/objects/HSEQ_Forms__c/fields/Highlight__c.field-meta.xml
<CustomField>
    <fullName>Highlight__c</fullName>
    <label>Highlight</label>
    <length>200</length>
    <type>Text</type>
</CustomField>