force-app/main/default/objects/HSEQ_Forms__c/fields/HSEQ__c.field-meta.xml
<CustomField>
    <fullName>HSEQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HSEQ #</label>
    <referenceTo>HSEQ_Forms__c</referenceTo>
    <relationshipLabel>HSEQ Forms</relationshipLabel>
    <relationshipName>HSEQ_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>