force-app/main/default/objects/HSEQ_Forms__c/fields/Inducted_By__c.field-meta.xml
<CustomField>
    <fullName>Inducted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conducted By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms (Inducted By)</relationshipLabel>
    <relationshipName>HSEQ_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>