force-app/main/default/objects/HSEQ_Forms__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms</relationshipLabel>
    <relationshipName>HSEQ_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>