force-app/main/default/objects/HSEQ_Forms__c/fields/Item_s_Defective__c.field-meta.xml
<CustomField>
    <fullName>Item_s_Defective__c</fullName>
    <label>Item/s Defective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>