force-app/main/default/objects/HSEQ_Forms__c/fields/JO__c.field-meta.xml
<CustomField>
    <fullName>JO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JO #</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipLabel>HSEQ Forms</relationshipLabel>
    <relationshipName>HSEQ_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>