force-app/main/default/objects/HSEQ_Forms__c/fields/Lowlight__c.field-meta.xml
<CustomField>
    <fullName>Lowlight__c</fullName>
    <label>Lowlight</label>
    <length>200</length>
    <type>Text</type>
</CustomField>