force-app/main/default/objects/HSEQ_Forms__c/fields/Mentor_Name2__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Name2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms (Mentor Name)</relationshipLabel>
    <relationshipName>HSEQ_Forms3</relationshipName>
    <type>Lookup</type>
</CustomField>