force-app/main/default/objects/HSEQ_Forms__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name of Inductee</label>
    <type>TextArea</type>
</CustomField>