force-app/main/default/objects/HSEQ_Forms__c/fields/Name_of_Derrickman__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Derrickman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Derrickman</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms (Name of Derrickman)</relationshipLabel>
    <relationshipName>HSEQ_Forms8</relationshipName>
    <type>Lookup</type>
</CustomField>