force-app/main/default/objects/HSEQ_Forms__c/fields/Name_of_Driller__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Driller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Driller</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms (Name of Driller)</relationshipLabel>
    <relationshipName>HSEQ_Forms6</relationshipName>
    <type>Lookup</type>
</CustomField>