force-app/main/default/objects/HSEQ_Forms__c/fields/Name_of_Lead_Floorhand__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Lead_Floorhand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Lead Floorhand</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms (Name of Lead Floorhand)</relationshipLabel>
    <relationshipName>HSEQ_Forms9</relationshipName>
    <type>Lookup</type>
</CustomField>