force-app/main/default/objects/HSEQ_Forms__c/fields/Name_of_Leasehand_L1__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Leasehand_L1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Leasehand (L1)</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms (Name of Leasehand (L1))</relationshipLabel>
    <relationshipName>HSEQ_FormslcPO</relationshipName>
    <type>Lookup</type>
</CustomField>