force-app/main/default/objects/HSEQ_Forms__c/fields/Name_of_Leasehand_L2__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Leasehand_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Leasehand (L2)</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms (Name of Leasehand (L2))</relationshipLabel>
    <relationshipName>HSEQ_FormslcP4</relationshipName>
    <type>Lookup</type>
</CustomField>