force-app/main/default/objects/HSEQ_Forms__c/fields/Name_of_Rig_Manager__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Rig_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Rig Manager</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms (Name of Rig Manager)</relationshipLabel>
    <relationshipName>HSEQ_Forms5</relationshipName>
    <type>Lookup</type>
</CustomField>