force-app/main/default/objects/HSEQ_Forms__c/fields/New_to_Rig__c.field-meta.xml
<CustomField>
    <fullName>New_to_Rig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New to Rig/Camp</label>
    <type>Checkbox</type>
</CustomField>