force-app/main/default/objects/HSEQ_Forms__c/fields/Other_Attendees_Name_Sign__c.field-meta.xml
<CustomField>
    <fullName>Other_Attendees_Name_Sign__c</fullName>
    <label>Other Attendees (Name &amp; Position)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>