force-app/main/default/objects/HSEQ_Forms__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <inlineHelpText>Was each attendee&apos;s presence accounted for?</inlineHelpText>
    <label>Personnel Accounted For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>