force-app/main/default/objects/HSEQ_Forms__c/fields/Reason_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Review__c</fullName>
    <label>Reason for Review</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months (or more) since Team Performed Routine Task</fullName>
            </value>
            <value>
                <fullName>New Employee</fullName>
            </value>
            <value>
                <fullName>Promotion of Existing Employee</fullName>
            </value>
            <value>
                <fullName>Critical SOP (See Critical SOPs)</fullName>
            </value>
            <value>
                <fullName>At Manager&apos;s Discretion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>