force-app/main/default/objects/HSEQ_Forms__c/fields/Response_from_HSE_Manager__c.field-meta.xml
<CustomField>
    <fullName>Response_from_HSE_Manager__c</fullName>
    <label>Response from HSE Manager</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>