force-app/main/default/objects/HSEQ_Forms__c/fields/Response_Rating__c.field-meta.xml
<CustomField>
    <fullName>Response_Rating__c</fullName>
    <inlineHelpText>Rate your crew&apos;s responsiveness to the drill, with 1 being poor and 5 being excellent. Excellent responsiveness would include qualities such as being prompt, listening intently and evacuating in an orderly fashion.</inlineHelpText>
    <label>Response Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>