force-app/main/default/objects/HSEQ_Forms__c/fields/Sample_Collected_By__c.field-meta.xml
<CustomField>
    <fullName>Sample_Collected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Collected By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>HSEQ Forms (Sample Collected By)</relationshipLabel>
    <relationshipName>HSEQ_Forms4</relationshipName>
    <type>Lookup</type>
</CustomField>