force-app/main/default/objects/HSEQ_Forms__c/fields/sample_test_passed__c.field-meta.xml
<CustomField>
    <fullName>sample_test_passed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the sample meet the microbial requirements for the NH &amp; MRC of the Australian Drinking Water Guideline 2011</inlineHelpText>
    <label>Sample Test Passed</label>
    <type>Checkbox</type>
</CustomField>