force-app/main/default/objects/HSEQ_Forms__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <length>200</length>
    <type>Text</type>
</CustomField>