force-app/main/default/objects/HSEQ_Forms__c/fields/Siganture__c.field-meta.xml
<CustomField>
    <fullName>Siganture__c</fullName>
    <label>Signature</label>
    <length>80</length>
    <type>Text</type>
</CustomField>