force-app/main/default/objects/HSEQ_Forms__c/fields/Signatureeeee__c.field-meta.xml
<CustomField>
    <fullName>Signatureeeee__c</fullName>
    <label>Signature</label>
    <length>120</length>
    <type>Text</type>
</CustomField>