force-app/main/default/objects/HSEQ_Forms__c/fields/Signatureeeeee__c.field-meta.xml
<CustomField>
    <fullName>Signatureeeeee__c</fullName>
    <label>Signature</label>
    <length>200</length>
    <type>Text</type>
</CustomField>