force-app/main/default/objects/HSEQ_Forms__c/fields/Signaturere__c.field-meta.xml
<CustomField>
    <fullName>Signaturere__c</fullName>
    <label>Signature</label>
    <length>120</length>
    <type>Text</type>
</CustomField>