force-app/main/default/objects/HSEQ_Forms__c/fields/SOP_Name__c.field-meta.xml
<CustomField>
    <fullName>SOP_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOP Name/#</label>
    <referenceTo>managed_docs__c</referenceTo>
    <relationshipLabel>HSEQ Forms</relationshipLabel>
    <relationshipName>HSEQ_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>