force-app/main/default/objects/HSEQ_Forms__c/fields/Time_Alarm_Sounded__c.field-meta.xml
<CustomField>
    <fullName>Time_Alarm_Sounded__c</fullName>
    <label>Time Alarm Sounded</label>
    <length>20</length>
    <type>Text</type>
</CustomField>