force-app/main/default/objects/HSEQ_Forms__c/fields/Time_Drill_Concluded__c.field-meta.xml
<CustomField>
    <fullName>Time_Drill_Concluded__c</fullName>
    <label>Time Drill Concluded</label>
    <length>20</length>
    <type>Text</type>
</CustomField>