force-app/main/default/objects/HSEQ_Forms__c/fields/Time_to_Evacuate__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Evacuate__c</fullName>
    <inlineHelpText>The number of minutes it took to evacuate the attendees to the muster point.</inlineHelpText>
    <label>Time to Evacuate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>