force-app/main/default/objects/HSEQ_Forms__c/fields/Type_of_Emergency_Drill_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Emergency_Drill_Conducted__c</fullName>
    <label>Type of Emergency Drill Conducted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Injury/Illness</fullName>
            </value>
            <value>
                <fullName>Vehicle/Machinery</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Environmental Spill</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Heights Rescue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Well Control Situation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>