force-app/main/default/objects/HSEQ_Forms__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Unit where audit/inspection/incident occurred</inlineHelpText>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>HSEQ Forms</relationshipLabel>
    <relationshipName>HSEQ_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>