force-app/main/default/objects/HSEQ_Forms__c/fields/Visitors_Accounted_For__c.field-meta.xml
<CustomField>
    <fullName>Visitors_Accounted_For__c</fullName>
    <inlineHelpText>Were there any visitors present and if so, were they accounted for?</inlineHelpText>
    <label>Visitors Accounted For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Visitors not present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>