force-app/main/default/objects/HSEQ_Forms__c/fields/Water_Sample_Point_s__c.field-meta.xml
<CustomField>
    <fullName>Water_Sample_Point_s__c</fullName>
    <label>Water Sample Point/s</label>
    <length>50</length>
    <type>Text</type>
</CustomField>