force-app/main/default/objects/HSEQ_Forms__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>HSEQ Forms</relationshipLabel>
    <relationshipName>HSEQ_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>