force-app/main/default/objects/HSEQ_Forms__c/fields/WD_Employee__c.field-meta.xml
<CustomField>
    <fullName>WD_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WD Employee</label>
    <type>Checkbox</type>
</CustomField>