force-app/main/default/objects/HSEQ_Forms__c/fields/X3rd_Party_Checklist__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Party Checklist</label>
    <type>Checkbox</type>
</CustomField>