force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Audit_External.recordType-meta.xml
<RecordType>
    <fullName>Audit_External</fullName>
    <active>false</active>
    <label>Audit - External</label>
</RecordType>