force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Audit_Internal.recordType-meta.xml
<RecordType>
    <fullName>Audit_Internal</fullName>
    <active>false</active>
    <label>Audit - Internal</label>
</RecordType>