force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Behavioral_Observation.recordType-meta.xml
<RecordType>
    <fullName>Behavioral_Observation</fullName>
    <active>false</active>
    <label>Behavioral Observation</label>
</RecordType>