force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Camp_Inspection_Register.recordType-meta.xml
<RecordType>
    <fullName>Camp_Inspection_Register</fullName>
    <active>false</active>
    <label>Camp Inspection Register</label>
</RecordType>