force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Dropped_Objects_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Dropped_Objects_Inspection</fullName>
    <active>true</active>
    <label>Dropped Objects Inspection</label>
</RecordType>