force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Emergency_Drill.recordType-meta.xml
<RecordType>
    <fullName>Emergency_Drill</fullName>
    <active>true</active>
    <label>Emergency Drill</label>
</RecordType>