force-app/main/default/objects/HSEQ_Forms__c/recordTypes/First_Aid_Inspection.recordType-meta.xml
<RecordType>
    <fullName>First_Aid_Inspection</fullName>
    <active>false</active>
    <description>To be completed when a First Aid Inspection is conducted.  Form to be uploaded</description>
    <label>First Aid Inspection</label>
</RecordType>