force-app/main/default/objects/HSEQ_Forms__c/recordTypes/HSEQ_Committee_Meeting.recordType-meta.xml
<RecordType>
    <fullName>HSEQ_Committee_Meeting</fullName>
    <active>false</active>
    <label>HSEQ Committee Meeting</label>
</RecordType>