force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Inspection_Field_Safety.recordType-meta.xml
<RecordType>
    <fullName>Inspection_Field_Safety</fullName>
    <active>true</active>
    <label>Field Safety Inspection</label>
</RecordType>