force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Management_Field.recordType-meta.xml
<RecordType>
    <fullName>Management_Field</fullName>
    <active>false</active>
    <label>Management Field Visit</label>
</RecordType>