force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Opportunity_for_Improvement.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_for_Improvement</fullName>
    <active>true</active>
    <label>Opportunity for Improvement</label>
</RecordType>