force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Permit_To_Work.recordType-meta.xml
<RecordType>
    <fullName>Permit_To_Work</fullName>
    <active>true</active>
    <label>Permit To Work</label>
</RecordType>