force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Pre_Start_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Pre_Start_Meeting</fullName>
    <active>true</active>
    <label>Pre Start Meeting</label>
</RecordType>