force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Safety_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Safety_Meeting</fullName>
    <active>true</active>
    <label>Safety Meeting</label>
</RecordType>