force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Site_Induction.recordType-meta.xml
<RecordType>
    <fullName>Site_Induction</fullName>
    <active>true</active>
    <label>Site Induction</label>
</RecordType>