force-app/main/default/objects/HSEQ_Forms__c/recordTypes/SOP_Review.recordType-meta.xml
<RecordType>
    <fullName>SOP_Review</fullName>
    <active>true</active>
    <label>SOP Review</label>
</RecordType>