force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Tool_Box_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Tool_Box_Meeting</fullName>
    <active>true</active>
    <label>Tool Box Meeting</label>
</RecordType>