force-app/main/default/objects/HSEQ_Forms__c/recordTypes/Water_Sampling.recordType-meta.xml
<RecordType>
    <fullName>Water_Sampling</fullName>
    <active>false</active>
    <label>Water Sampling</label>
</RecordType>