force-app/main/default/objects/HSEQ_Forms__c/listViews/BC_Site_Induction.listView-meta.xml
<ListView>
    <fullName>BC_Site_Induction</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Inducted_By__c</columns>
    <columns>Name__c</columns>
    <columns>New_to_WD__c</columns>
    <columns>New_to_Rig__c</columns>
    <columns>Forms_Attached__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>HSEQ_Forms__c.Site_Induction</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Roma Base Camp</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <filters>
        <field>Contractor__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Visitor__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Base Camp - Induction (WD Personnel)</label>
    <sharedTo>
        <group>Base_Camp</group>
        <group>Safety</group>
    </sharedTo>
</ListView>